<resources>
    <string name="app_name">Ejemplo ciudades</string>
    <string name="nueva_provincia">Nueva Provincia</string>
    <string name="nombre_provincia">Nombre Provincia</string>
    <string name="insertar_provincia">Insertar Provincia</string>
    <string name="actualizar_provincia">Actualizar Provincia</string>
    <string name="siguiente">Siguiente</string>
    <string name="borrar_provincia">Borrar Provincia</string>
    <string name="id_de_la_provincia">ID de la provincia</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="lista_de_ciudades">Lista de ciudades</string>
    <string name="foto_ciudad">foto ciudad</string>
    <string name="nombre_ciudad">Nombre Ciudad</string>
    <string name="habitantes">Habitantes</string>
    <string name="provincia">Provincia</string>
    <string name="detalles_ciudad">Detalles Ciudad</string>
    <string name="todo">TODO</string>
</resources>