<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_ciudad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/foto_ciudad"
        app:srcCompat="@drawable/ciudad" />

    <LinearLayout
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_rv_nombrec"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_ciudad"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_rv_habitantes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/habitantes" />

        <TextView
            android:id="@+id/txt_rv_provincia"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/provincia" />
    </LinearLayout>
</LinearLayout>